# garment-aql-calculator

./: README.md
npm/: index.d.ts  index.js  package.json  test.js
python/: README.md  pyproject.toml  test_aql.py
python/src/garment_aql_calculator/: __init__.py
